--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="shirt">
         <div>💜</div>
-        <p>I Drica</p>
+        <p>I CSS</p>
       </div> 
       <div class="penguin-body">
         <div class="arm left"></div>
